Fix images on mobile (hopefully)

--- a/css/site.scss
+++ b/css/site.scss
@@ -138,6 +138,7 @@ html {
 
 header {
     background-attachment: fixed;
+    -webkit-background-size: cover;
     background-size: cover;
     box-shadow: 0px 0px 20px 10px rgba(0,0,0,0.1) inset;
 }
